UPLOAD to S3, SWAGGER "POST" to Multipart/Form-data
